1999-11-12  Ulrich Drepper  <drepper@cygnus.com>

	* locale/C-ctype.c: Fix typo in char class name.

	* configure.in: Allow user so specify --enable-kernel=current.

1999-11-12  Thorsten Kukuk  <kukuk@suse.de>

	* nis/nss_nisplus/nisplus-publickey.c: Check for snprintf return value.

	* sysdeps/unix/sysv/linux/alpha/sys/procfs.h: Follow changes from
	i386 version.
	* sysdeps/unix/sysv/linux/arm/sys/procfs.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/sys/procfs.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/sys/procfs.h: Likewise.
	* sysdeps/unix/sysv/linux/sys/procfs.h: Likewise.

1999-11-12  Ulrich Drepper  <drepper@cygnus.com>

	* intl/locale.alias: Add Estonian entries.
	Patch by Marko Kreen <marko@et.ee> [PR libc/1444].

1999-11-02  Andreas Jaeger  <aj@suse.de>

	* Versions.def: Add version GLIBC_2.2 for libm.
	* math/fenv.h: Add prototypes for fegetexcept, feenableexcept and
	fedisableexcept.
	* sysdeps/generic/feenablxcpt.c: Stub file.
	* sysdeps/generic/fedisblxcpt.c: Stub file.
	* sysdeps/generic/fegetexcept.c: Stub file.
	* sysdeps/i386/fpu/fedisblxcpt.c: New file.
	* sysdeps/i386/fpu/feenablxcpt.c: New file.
	* sysdeps/i386/fpu/fegetexcept.c: New file.
	* math/Makefile (libm-support): Add new files.
	* math/Versions: Add new functions with version GLIBC_2.2.
	* manual/arith.texi (Control Functions): Document fegetexcept,
	feenableexcept and fedisableexcept.

1999-11-01  Wolfram Gloger  <wg@malloc.de>

	* malloc/malloc.h: Describe __malloc_initialize_hook.
	* manual/memory.texi: Document __malloc_initialize_hook.

1999-11-11  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/setrlimit.c: Correctly use rlimits.

1999-11-09  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/getlogin_r.c (getlogin_r): Sync with getlogin
	implementation for ttyname_r call; fix inverted condition; return
	ut_user.
	Closes PR libc/1438.

1999-11-10  Ulrich Drepper  <drepper@cygnus.com>

	* math/fenv.h: Include bits/fenvinline.h if optimizing.