@@ -1,3 +1,11 @@
+1999-11-13  Thorsten Kukuk  <kukuk@suse.de>
+
+	* sysdeps/unix/sysv/linux/sparc/bits/signum.h: Add SIGPWR define
+	from current kernel headers.
+
+	* sunrpc/key_call.c: Use /usr/etc/keyenvoy only if we don't have
+	SO_PASSCRED defined.
+
 1999-11-12  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locale/C-ctype.c: Fix typo in char class name.
